@@ -31,6 +31,7 @@ address-merger: extend skipped object output with DG information
 address-edit: new actions=value-host-object-add-netmask-m32
 userid-mgr: fix help / missing variable set
 register-ip-mgr: introduce new util
+rule-merger: merge for all methods the available tags
 
 utils(under development):
 ike: new script to show all IKE/IPsec profile and config settings
